@@ -5,19 +5,24 @@ import org.springframework.transaction.annotation.Transactional;
 import roomescape.domain.member.domain.Member;
 import roomescape.domain.member.service.MemberService;
 import roomescape.domain.reservation.domain.Reservation;
+import roomescape.domain.reservation.domain.Reservations;
 import roomescape.domain.reservation.domain.repository.ReservationRepository;
 import roomescape.domain.reservation.error.exception.ReservationErrorCode;
 import roomescape.domain.reservation.error.exception.ReservationException;
 import roomescape.domain.reservation.service.dto.AdminReservationRequest;
 import roomescape.domain.reservation.service.dto.ReservationRequest;
 import roomescape.domain.reservation.service.dto.ReservationResponse;
+import roomescape.domain.reservation.service.dto.ReservationWaitRequest;
 import roomescape.domain.theme.domain.Theme;
 import roomescape.domain.theme.service.ThemeService;
 import roomescape.domain.time.domain.Time;
 import roomescape.domain.time.service.TimeService;
+import roomescape.domain.waiting.domain.WaitingRanks;
+import roomescape.domain.waiting.service.WaitingService;
+import roomescape.domain.waiting.service.dto.WaitingResponse;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static roomescape.domain.reservation.utils.DateTimeCheckUtil.isBeforeCheck;
 import static roomescape.domain.reservation.utils.FormatCheckUtil.reservationDateFormatCheck;
@@ -29,12 +34,14 @@ public class ReservationService {
     private final TimeService timeService;
     private final ThemeService themeService;
     private final MemberService memberService;
+    private final WaitingService waitingService;
     private final ReservationRepository reservationRepository;
 
-    public ReservationService(TimeService timeService, ThemeService themeService, MemberService memberService, ReservationRepository reservationRepository) {
+    public ReservationService(TimeService timeService, ThemeService themeService, MemberService memberService, WaitingService waitingService, ReservationRepository reservationRepository) {
         this.timeService = timeService;
         this.themeService = themeService;
         this.memberService = memberService;
+        this.waitingService = waitingService;
         this.reservationRepository = reservationRepository;
     }
 
@@ -44,10 +51,18 @@ public class ReservationService {
         Theme theme = themeService.findById(reservationRequest.getThemeId());
         validationCheck(reservationRequest.getName(), reservationRequest.getDate(), time);
         Reservation reservation = new Reservation(null, reservationRequest.getName(), reservationRequest.getDate(), reservationRequest.getStatus(), theme, time, null);
-        loginMember.connectWith(reservation);
+        loginMember.addReservation(reservation);
         Long id = reservationRepository.save(reservation);
         Reservation savedReservation = findById(id);
         return mapToReservationResponseDto(savedReservation);
+    }
+
+    @Transactional
+    public WaitingResponse waitForReservation(ReservationWaitRequest reservationRequest, Member loginMember) {
+        Time time = timeService.findById(reservationRequest.getTimeId());
+        Theme theme = themeService.findById(reservationRequest.getThemeId());
+        validationCheck(loginMember.getName(), reservationRequest.getDate(), time);
+        return waitingService.save(time, theme, loginMember, reservationRequest.getDate());
     }
 
     @Transactional
@@ -56,7 +71,7 @@ public class ReservationService {
         Theme theme = themeService.findById(adminReservationRequest.getThemeId());
         Member member = memberService.findById(adminReservationRequest.getMemberId());
         Reservation reservation = new Reservation(null, member.getName(), adminReservationRequest.getDate(), adminReservationRequest.getStatus(), theme, time, member);
-        member.connectWith(reservation);
+        member.addReservation(reservation);
         Long id = reservationRepository.save(reservation);
         Reservation savedReservation = findById(id);
         return mapToReservationResponseDto(savedReservation);
@@ -70,12 +85,13 @@ public class ReservationService {
     @Transactional(readOnly = true)
     public List<ReservationResponse> findAll() {
         List<Reservation> reservations = reservationRepository.findAll();
-        return reservations.stream().map(this::mapToReservationResponseDto).collect(Collectors.toList());
+        return reservations.stream().map(this::mapToReservationResponseDto).toList();
     }
 
     public List<ReservationResponse> findAllByMemberId(Long id) {
-        List<Reservation> reservations = reservationRepository.findAllByMemberId(id);
-        return reservations.stream().map(this::mapToReservationResponseDto).toList();
+        Reservations reservations = new Reservations(reservationRepository.findAllByMemberId(id));
+        WaitingRanks waitingRanks = new WaitingRanks(waitingService.findWaitingRankByMemberId(id));
+        return combineResponses(reservations, waitingRanks);
     }
 
     @Transactional
@@ -90,14 +106,14 @@ public class ReservationService {
         isBeforeCheck(date, time.getStartAt());
     }
 
+    private List<ReservationResponse> combineResponses(Reservations reservations, WaitingRanks waitingRanks) {
+        List<ReservationResponse> combinedResponses = new ArrayList<>();
+        combinedResponses.addAll(reservations.mapToReservationResponseDto());
+        combinedResponses.addAll(waitingRanks.mapToReservationResponseDto());
+        return combinedResponses;
+    }
+
     private ReservationResponse mapToReservationResponseDto(Reservation reservation) {
-        return new ReservationResponse(
-                reservation.getId(),
-                reservation.getName(),
-                reservation.getDate(),
-                Status.findByDescription(reservation.getStatus()),
-                reservation.getTime(),
-                reservation.getTheme(),
-                reservation.getMember());
+        return new ReservationResponse(reservation);
     }
 }
